create result counter/page counter, styled accordingly

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       </header>
 
       <div class="search-results">
+        <div class="results-counter"></div>
         <ul class="results">
           <!-- 
           <li class="preview">
