--- a/index.html
+++ b/index.html
@@ -264,17 +264,17 @@
         <div class="upload__column">
           <h3 class="upload__heading">Recipe data</h3>
           <label>Title</label>
-          <input value="TEST23" required name="title" type="text" />
+          <input required name="title" type="text" />
           <label>URL</label>
-          <input value="TEST23" required name="sourceUrl" type="text" />
+          <input required name="sourceUrl" type="text" />
           <label>Image URL</label>
-          <input value="TEST23" required name="image" type="text" />
+          <input required name="image" type="text" />
           <label>Publisher</label>
-          <input value="TEST23" required name="publisher" type="text" />
+          <input required name="publisher" type="text" />
           <label>Prep time</label>
-          <input value="23" required name="cookingTime" type="number" />
+          <input required name="cookingTime" type="number" />
           <label>Servings</label>
-          <input value="23" required name="servings" type="number" />
+          <input required name="servings" type="number" />
         </div>
 
         <div class="upload__column">
